2011-01-22  Dirk Eddelbuettel  <edd@debian.org>

	* src/Function.cpp: Assign Rf_install() result to local SEXP
	* src/RObject.cpp: idem
	* src/Symbol.cpp: idem

2011-01-13  Douglas Bates  <bates@stat.wisc.edu>

	* src/Reference.cpp: Protect the value being set in Reference::FieldProxy::set

2011-01-11  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/string_proxy.h: fix implicit conversion to int,
	reported by Daniel Sabanes Bove on Rcpp-devel

	* inst/unitTests/runit.vector.R: unit test for the above fix

2011-01-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp.bib: Updated a number of CRAN versions

2011-01-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/config.h (RCPP_VERSION): Set to 0.9.0, at last.

2011-01-06  Douglas Bates  <bates@stat.wisc.edu>

	* R/zzz.R (.onLoad): Don't call init_Rcpp_cache here.

	* src/Rcpp_init.c: Don't register init_Rcpp_cache.  It should only
	be called once and it is called in the C function R_init_Rcpp.

	* NAMESPACE: Use registered symbols instead of relisting them.
	Registration allows for checking the number of arguments.

2011-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* src/debugging.cpp: Treat the *BSD flavours like Windows and offer
	file and line number but not stack trace (for lack of execinfo)

	* src/Makevars: Replace implicit variable $^ with explicit list

2011-01-02  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-quickref/Rcpp-quickref.Rnw: Applied patch with
	additional documentation by Christian Gunning

2010-12-23  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/RObject.h: New internal class SEXPstack to handle
	garbage collection. Presumably more efficient than R_PreserveObject
	and R_ReleaseObject

	* inst/include/Rcpp/sugar/operators/times.h: More efficient operator*
	for REALSXP sugar expressions, avoiding unnecessary NA tests.

	* inst/include/Rcpp/sugar/operators/divides.h: More efficient